--- a/skill.html
+++ b/skill.html
@@ -16,21 +16,15 @@
     <header>
         <nav class="home__nav">
             <ul class="nav__list">
-                <li class="list__item"><a class="list__link" href="skill.html">Habilidades</a></li>
+                <li class="list__item"><a class="list__link" href="index.html">Home</a></li>
                 <li class="list__item"><a class="list__link" href="about.html">Sobre</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="home">
-            <div class="home__img">
-                <img class="img__photo" src="https://avatars.githubusercontent.com/u/130495376?s=400&u=6b90dbb9d5a33800e326392aaecab04ec6b18cb2&v=4" alt="Esteban__img">
-            </div>
-            <div class="home__text">
-                <h1 class="text__name">Esteban Leiva Pérez</h1>
-                <p class="text__description">Desarrollador Junior de videojuegos y páginas web</p>
-            </div>
-        </section>        
+        <section>
+
+        </section>
     </main>
     <footer>
         <p class="footer__description">Desarrollado por Tebaah - 2023</p>
