feat(social medias):Social network browser added

--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
                 <h1 class="text__name">Esteban Leiva Pérez</h1>
                 <p class="text__description">Desarrollador Junior de videojuegos y páginas web</p>
             </div>
+            <div class="home__socialmedia">
+                <nav class="socialmedia__nav">
+                    <ul class="nav__list">
+                        <li class="list__item"><a href="https://github.com/Tebaah"><img class="list__img" src="assets/img/home/github.svg" alt="github"></a></li>
+                        <li class="list__item"><a href="https://www.linkedin.com/in/tebaahgames"><img class="list__img" src="assets/img/home/linkedin.svg" alt="linkedin"></a></li>
+                        <li class="list__item"><a href="https://learn.unity.com/u/5c9bdc2aedbc2a19057fd9cc?tab=profile"><img class="list__img" src="assets/img/home/unity.svg" alt="unity"></a></li>
+                        <li class="list__item"><a href="https://learn.microsoft.com/es-es/users/Tebaah-3365"><img class="list__img" src="assets/img/home/microsoft.svg" alt="microsoft"></a></li>
+                    </ul>
+                </nav>
+            </div>
         </section>        
     </main>
     <footer>
