feat(skill):description paragraph added

--- a/skill.html
+++ b/skill.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <section>
-
+            <p>Soy un apasionado Técnico en Informática con un fuerte compromiso con el código abierto y el desarrollo de videojuegos. Mi conjunto de habilidades abarca diversos lenguajes de programación, incluyendo C#, HTML y CSS. Mi enfoque principal se centra en el mundo de los videojuegos, especialmente en el motor en tiempo real Unity. </p>
         </section>
     </main>
     <footer>
