Structure skills page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="home__text">
                 <h1 class="text__name">Esteban Leiva Pérez</h1>
-                <p class="text__description">Desarrollador Junior de videojuegos y páginas web</p>
+                <p class="text__description">Desarrollador de videojuegos y páginas web</p>
             </div>
             <div class="home__socialmedia">
                 <nav class="socialmedia__nav">
