--- a/skill.html
+++ b/skill.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/home.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/home_skill.css">
     <title>Portafolio</title>
 </head>
 <body>
@@ -21,10 +22,23 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="home__skill">
         <section>
-            <p>Soy un apasionado Técnico en Informática con un fuerte compromiso con el código abierto y el desarrollo de videojuegos. Mi conjunto de habilidades abarca diversos lenguajes de programación, incluyendo C#, HTML y CSS. Mi enfoque principal se centra en el mundo de los videojuegos, especialmente en el motor en tiempo real Unity. </p>
+            <p>Soy un apasionado Técnico en Informática con un fuerte compromiso con el código abierto y el desarrollo de videojuegos. Mi conjunto de habilidades abarca diversos lenguajes, incluyendo C#, HTML y CSS. Mi enfoque principal se centra en el mundo de los videojuegos, especialmente en el motor en tiempo real Unity. </p>
+           <!-- <p>Hablar sobre git - github</p>
+            <p>Hbalar sobre los sitemas operativos</p>
+            <p>Hablar sobre ide</p>-->
         </section>
+        <!--<section>
+            <h2>Proyectos personales</h2>
+            <p>Prototipo de juego - plataforma 2d - inspirado en mario bros</p>
+            <p> enlace youtube - codigo github - descarga de archivo ejecutable o link a itch.io</p>
+            <p>imagen c# - unity - ide</p>
+        </section>
+        <section>
+            <h2>Proyectos de aprendizaje</h2>
+            <p>alura - Encriptador de contrasenas</p>
+        </section>-->
     </main>
     <footer>
         <p class="footer__description">Desarrollado por Tebaah - 2023</p>
