--- a/index.html
+++ b/index.html
@@ -3,52 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&family=Share+Tech+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/home.css">
-    <link rel="stylesheet" href="assets/css/header.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
-    <title>Portafolio</title>
+
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+	<!-- Estilos CSS -->
+	<link rel="stylesheet" href="assets/style.css">
+
 </head>
 <body>
-    <header>
-        <nav class="home__nav">
-            <ul class="nav__list">
-                <li class="list__item"><a class="list__link" href="skill.html">Habilidades</a></li>
-                <li class="list__item"><a class="list__link" href="about.html">Sobre</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="home">
-            <div class="home__img">
-                <img class="img__photo" src="https://avatars.githubusercontent.com/u/130495376?s=400&u=6b90dbb9d5a33800e326392aaecab04ec6b18cb2&v=4" alt="Esteban__img">
-            </div>
-            <div class="home__text">
-                <h1 class="text__name">Esteban Leiva Pérez</h1>
-                <p class="text__description">Desarrollador de videojuegos</p>
-            </div>
-            <div>
-                <img src="" alt="Godot">
-                <img src="" alt="Unity">
-                <img src="" alt="CSharp">
-            </div>
-        </section>        
-    </main>
-    <footer class="footer">
-        <p class="footer__description">Desarrollado por Tebaah - 2023</p>
-        <div class="home__socialmedia">
-            <nav class="socialmedia__nav">
-                <ul class="nav__list">
-                    <li class="list__item"><a href="https://github.com/Tebaah"><img class="list__img" src="assets/img/home/github.svg" alt="github"></a></li>
-                    <li class="list__item"><a href="https://www.linkedin.com/in/tebaahgames"><img class="list__img" src="assets/img/home/linkedin.svg" alt="linkedin"></a></li>
-                    <li class="list__item"><a href="https://learn.unity.com/u/5c9bdc2aedbc2a19057fd9cc?tab=profile"><img class="list__img" src="assets/img/home/unity.svg" alt="unity"></a></li>
-                    <li class="list__item"><a href="https://learn.microsoft.com/es-es/users/Tebaah-3365"><img class="list__img" src="assets/img/home/microsoft.svg" alt="microsoft"></a></li>
-                </ul>
-            </nav>
+    <!-- Nav -->
+    <nav class="navbar navbar-expand-md bg-body-tertiary">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+		  <!-- Logo navbar -->
+          <div class="collapse navbar-collapse" id="navbar-toggler">
+            <a class="navbar-brand" href="#">
+                <!-- Mi logo imagen -->
+				<img src="assets/img/logo.png" width="100" alt="logo">
+            </a>
+			<!-- Botones de navegacion -->
+            <ul class="navbar-nav d-flex justify-content-center align-items-center">
+                <li class="nav-item">
+                    <a class="btn btn-primary" href="index.html" role="button">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-primary" href="gamesprojects.html" role="button">Games Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-primary" href="webprojects.html" role="button">Web Projects</a>
+                </li>								
+
+          </div>
         </div>
-    </footer>
+      </nav>
+
+      <!-- bootstrap -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
